--- a/resources/research_skills/writing/style/README.org
+++ b/resources/research_skills/writing/style/README.org
@@ -1,8 +1,16 @@
 
 #+OPTIONS: toc:nil        (no default TOC at all)
 
-|-----------------------+-----------------+-----------+------------------|
-| Rule                  | Counter example | Example   | Exceptions       |
-|-----------------------+-----------------+-----------+------------------|
-| Italicize Latin terms | /               | /et al./, | e.g., i.e., etc. |
-|-----------------------+-----------------+-----------+------------------|
+
+
+* Formatting conventions
+
+|--------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------|
+| Rule                                       | Example                                                                                                                                                                  | Exceptions       |
+|--------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------|
+| Italicize Latin or other non-English terms | /et al./,                                                                                                                                                                | e.g., i.e., etc. |
+| Italicize terms when first defined.        | To precisely describe the local wiring structure, the state-of-the-art methods use \graphlets\, small, connected, non-isomorphic, induced sub-graphs of a large network. |                  |
+| Italicize technical terms on first use.    | \spectral embedding\, \node2vec\                                                                                                                                         |                  |
+|                                            |                                                                                                                                                                          |                  |
+|--------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------|
+
